--- a/_data/template.yml
+++ b/_data/template.yml
@@ -7,6 +7,6 @@ color:
 
 # Font Families
 font:
-  primary: '"Apercu Mono Regular", "Andale Mono", monospace'
+  primary: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
   #'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
   secondary: '"Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
