--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: 6ca347
-  secondary: 689866
+  secondary: 6ca347
   secondary-dark: 2302
   muted: 869c86
 
