--- a/_config.yml
+++ b/_config.yml
@@ -9,18 +9,18 @@ description: "EMBL Australia Postgraduate Symposium 2018"
 
 # Team names, titles and social links
 people:
-- name: Example Speaker
+- name: Mystery Speaker
   pic: placeholder
-  position: Science Person at Place
+  position: TBA
 
-- name: Example Speaker
+- name: Mystery Speaker
   pic: placeholder
-  position: Science Person at Place
+  position: TBA
 
 
-- name: Example Speaker
+- name: Mystery Speaker
   pic: placeholder
-  position: Science Person at Place
+  position: TBA
 
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
