--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ people:
   id: Neurobiology
   bio: A/Prof. Cedric Bardy achieved his PhD at the University of Sydney in 2008 before returning to Europe as a Postdoctoral fellow at Institut Pasteur, Paris, France. Since then he has worked as a Marie-Curie fellow in the USA and France, and has most recently been appointed Associate Professor/Senior Research Fellow, heading his own lab in the Mind & Brain theme at the South Australian Health and Medical Research Institute (SAHMRI), and senior lecturer at Flinders University. An internationally recognised leader in the field of human neural stem cells, A/Prof Bardy’s lab uses electrophysiology and single cell genetics to develop and improve in vitro models and new biotechnologies to unravel the effect of neurological disorders at the cellular and molecular level. In addition to his own research in human neurophysiology and genetics, A/Prof Bardy serves as a scientific consultant for biotech companies in the stem cell field.
 
-- name: Dr Kim-Anh Lê Cao
+- name: Dr. Kim-Anh Lê Cao
   pic: placeholder
   theme: Bioinformatics
   id: Bioinformatics
@@ -33,7 +33,7 @@ people:
   bio: A/Prof. Natalie Sims was awarded her PhD from the University of Adelaide. She completed postdoctoral studies at the Garvan Institute (Sydney) and Yale University before starting her own laboratory in Melbourne in 2001. A/Prof. Sims is currently the deputy director of St Vincent’s Institute of Medical Research (SVI) in Melbourne, and heads the Bone Cell Biology and Disease Unit, as well as serving as editor and associate editor for several research journals and President-elect of the Australia and New Zealand Bone and Mineral Society. A/Prof. Sims is internationally recognised for her expertise in the study of gene knockout animals and animal models of bone diseases, having been awarded the Fuller-Albright Award in 2010 for her work in bone and mineral research by the American Society of Bone and Mineral Research, as well as the Herbert A Fleisch medal in 2013, honouring her outstanding and groundbreaking achievements in basic bone science, by the International Bone and Mineral Society.
 
 - name: Prof. Jenny Martin
-  pic: placeholder
+  pic: Jenny_Martin_300px
   theme: Immunology and Virology
   id: Virology_and_Immunology
   bio: Achieving her PhD from the University of Oxford in 1990, Professor Jenny Martin’s background is in pharmacy. Prof. Martin returned to Australia with an ARC Queen Elizabeth II Fellowship in 1993, establishing the first protein crystallography lab at the University of Queensland, now known as the UQ Remote Operation Crystallisation and X-ray Diffraction (UQ ROCX) Facility. Prof. Martin has received several distinguished fellowships, including being one of only 2 women and 15 researchers Australia-wide to receive an inaugural ARC Australian Laureate Fellowship in 2009. Prof. Martin is currently the Director of the Griffith Institute for Drug Discovery at Griffith University, QLD, and is a strong advocate for equal opportunity and gender balance in academia. Her work utilises protein crystallography for structure determination of disease-causing proteins and the application of structural biology in early stage drug discovery. Among her many prestigious honours and awards, Professor Martin was elected as a Fellow of the Australian Academy of Science, and recently made a Companion of the Order of Australia for her contributions to science and to gender equality.
