--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ people:
   id: Virology_and_Immunology
   bio: Achieving her PhD from the University of Oxford in 1990, Professor Jenny Martin’s background is in pharmacy. Prof. Martin returned to Australia with an ARC Queen Elizabeth II Fellowship in 1993, establishing the first protein crystallography lab at the University of Queensland, now known as the UQ Remote Operation Crystallisation and X-ray Diffraction (UQ ROCX) Facility. Prof. Martin has received several distinguished fellowships, including being one of only 2 women and 15 researchers Australia-wide to receive an inaugural ARC Australian Laureate Fellowship in 2009. Prof. Martin is currently the Director of the Griffith Institute for Drug Discovery at Griffith University, QLD, and is a strong advocate for equal opportunity and gender balance in academia. Her work utilises protein crystallography for structure determination of disease-causing proteins and the application of structural biology in early stage drug discovery. Among her many prestigious honours and awards, Professor Martin was elected as a Fellow of the Australian Academy of Science, and recently made a Companion of the Order of Australia for her contributions to science and to gender equality.
 
-- name: TBA
+- name: A/Prof. Tracy Ainsworth
   pic: placeholder
   theme: Ecology
   id: Ecology
-  bio:
+  bio: After completing her PhD in Marine Sciences in 2007 at the University of Queensland, A/Prof. Tracy Ainsworth moved to the ARC Centre of Excellence for Coral Reef Studies at James Cook University. During her time there as Principal Research Fellow, A/Prof Ainsworth received prestigious awards including an Australian Research Council Super Science Research Fellowship (2011-2014) and an Australian Research Council Postdoctoral Fellowship (2008-2011). A/Prof. Ainsworth is currently an Associate Professor in the School of Biological, Earth and Environmental Sciences (BEES) at The University of New South Wales, Sydney, where her research leads the way in understanding the impact of environmental change on corals and marine animals. A/Prof Ainsworth’s extensive work on the stress mechanisms of coral in the Great Barrier Reef was recently published in the prestigious journal, Science.
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
